# NetworkApp

./: .gitignore  CMakeLists.txt  README.md
NetServices/: CMakeLists.txt
NetServices/src/: mosquittoconnect.cpp  mosquittoconnect.h
NetworkApp/: CMakeLists.txt  NetworkApp.cpp  NetworkApp.h
NetworkAppClient/: CMakeLists.txt  NetworkAppClient.cpp  Parser.cpp  Sender.cpp  Sender.h  main.cpp
NetworkAppClient/src/: client.cpp  client.h  networkappclient.cpp  networkappclient.h  parser.cpp  parser.h  sender.cpp  sender.h
NetworkAppPseudoServer/: CMakeLists.txt  NetworkAppPseudoServer.cpp  NetworkAppPseudoServer.h  Receiver.cpp  main.cpp
NetworkAppPseudoServer/src/: networkapppseudoserver.cpp  networkapppseudoserver.h  receiver.cpp  receiver.h  server.cpp  server.h  serverparser.cpp  serverparser.h
cmake/: libdeps.cmake
